--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@ant-design/icons": "^6.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.26.2",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
