--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.26.2",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
