--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "antd": "^5.26.2",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11",
     "yup": "^1.6.1"
   },
