--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^6.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.26.2",
+    "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
